--- a/views/javascript_named_routes/routes/index.js.erb
+++ b/views/javascript_named_routes/routes/index.js.erb
@@ -1,32 +1,37 @@
 var Routes = (function() {
   var _ = {};
   
-  var _path = function(segments, keys, args) {
-    var ki = 0;
-    var next_arg;
-    
-    if (args.length == 1 && typeof args[0] == "object") {
-      args = args[0];
-      next_arg = function() { return args[keys[ki++]]; };
-    } else {
-      next_arg = function() { return args[ki++]; };
-    }
-    
-    for (var i = 0; i < segments.length; ++i) {
-      if (segments[i] === _) {
-        segments[i] = next_arg();
+  var _route = function(required, optional, names) {
+    return function() {
+      var i, params = [];
+      
+      if (arguments.length == 1 && typeof arguments[0] == "object") {
+        for (i = 0; i < names.length; ++i) {
+          if (!arguments[0][names[i]])
+            break;
+          params.push(arguments[0][names[i]]);
+        }
+      } else {
+        for (i = 0; i < arguments.length; ++i) {
+          params.push(arguments[i]);
+        }
       }
-    }
-    
-    return segments.join('');
+      
+      var path = [], pi = 0;
+      for (i = 0; i < required.length; ++i) {
+        path.push(required[i] === _ ? params[pi++] : required[i]);
+      }
+      for (i = 0; i < optional.length && pi < params.length; ++i) {
+        path.push(optional[i] === _ ? params[pi++] : optional[i]);
+      }
+      return path.join('');
+    };
   };
   
   return {
   <% separator = '' -%>
-  <% for name, segments, keys in @route_data %>
-    <%= separator %><%= name %>:
-      function() { return _path(<%= segments %>, <%= keys %>, arguments); }
-      <% separator = ',' -%>
+  <% for name, required, optional, segment_keys in @route_data %>
+    <%= separator %><%= name %>: _route(<%= required %>, <%= optional %>, <%= segment_keys %>)<% separator = ',' -%>
   <% end -%>
 
   };
