updated format param handling to rails 2.3 camelized js function names

--- a/views/javascript_named_routes/routes/index.js.erb
+++ b/views/javascript_named_routes/routes/index.js.erb
@@ -33,6 +33,13 @@ var Routes = (function() {
         }
       }
       
+      // add the format, if provided
+      if (params.format) {
+        path.push('.');
+        path.push(params.format);
+        delete params.format;
+      }
+      
       // put any extra params in the query string
       var separator = '?';
       for (var k in params) {
